# readflow

./: .gitignore  Cargo.toml  README.md  install.sh
.github/workflows/: build.yml
pkgbuild/: PKGBUILD
scripts/: install-linux.sh  install-mac.sh  install-windows.ps1  install.sh
src/: lib.rs  main.rs
src/ai/: mod.rs  summarizer.rs
src/browser/: fetcher.rs  mod.rs  parser.rs  renderer.rs
src/export/: exporter.rs
src/feeds/: mod.rs  parser.rs
src/reader/: extractor.rs  mod.rs
src/storage/: database.rs
src/ui/: app.rs  mod.rs  runner.rs
src/ui/components/: mod.rs
