[package]
name = "readflow"
version = "0.1.0"
edition = "2021"
authors = ["ReadFlow Team"]
description = "A modern TUI browser for all platforms - Reader's Delight"
license = "MIT"
repository = "https://github.com/readflow/readflow"
homepage = "https://github.com/readflow/readflow"
keywords = ["tui", "browser", "terminal", "reader"]
categories = ["command-line-utilities", "web-browsers"]

[dependencies]
tokio = { version = "1.41", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "cookies"] }
scraper = "0.22"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ratatui = "0.29"
crossterm = "0.28"
anyhow = "1.0"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
url = "2.5"
regex = "1.11"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.11", features = ["v4"] }
dirs = "6.0"
atty = "0.2"
arboard = "3.4"
clap = { version = "4.5", features = ["derive"] }
rss = { version = "2.0", optional = true }
atom_syndication = { version = "0.12", optional = true }

[target.'cfg(windows)'.dependencies]
winreg = "0.55"

[features]
default = ["feed-reader", "ai-integration"]
feed-reader = ["dep:rss", "dep:atom_syndication"]
ai-integration = []

[lib]
name = "readflow"
path = "src/lib.rs"

[[bin]]
name = "readflow"
path = "src/main.rs"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
opt-level = "s"

[package.metadata.installer]
package = "readflow"
version = "0.1.0"
